# f3-qt

./: .gitignore  CMakeLists.txt  INSTALL  README.md  aboutdialog.cpp  aboutdialog.ui  f3-qt.desktop  f3_launcher.cpp  f3_launcher.h  helpwindow.cpp  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passworddialog.cpp  passworddialog.h
